# iab-agentic-ecosystem-simulation

./: .env.example  .gitignore  CURRENT_STUDY.md  Dockerfile  FINAL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_A2A_SERVER.md  KEY_FINDINGS.md  OPTIMIZED_EXECUTION_PLAN.md  README.md  SIMULATION_RESULTS_30DAY.md  SIMULATION_RESULTS_REAL_LLM.md  pyproject.toml  results_real_llm_5day.json  v2_real_llm_results.json
.beads/: PRIME.md  types.jsonl
archive/old-studies-2026-01-30/: 30DAY_REAL_LLM_FINAL.json  30DAY_REAL_LLM_FINAL_ANALYSIS.md  results_30day.json  results_iab_mock.json  results_real_llm_30day.json  results_real_llm_test.json
content/: README.md  executive-summary-programmatic-future.md  hidden-tax-programmatic-advertising.md  immutable-ledger-ad-tech.md  three-trading-models-comparison.md  volatile-ai-memory-cost.md
data/: campaign_briefs.json
docker/: docker-compose.metrics.yml  docker-compose.parallel.yml  docker-compose.yml
docker/postgres/: ground_truth.sql  init.sql  ledger.sql  parallel_schemas.sql
docs/: 30DAY_FULL_ANALYSIS.md  30DAY_FULL_RESULTS.json  30DAY_LLM_RESULTS_2026-01-30.json  30DAY_REAL_LLM_RESULTS_2026-01-30.json  5DAY_REAL_LLM_RESULTS.json  5DAY_REAL_LLM_RESULTS.md  ADFI_SETTLEMENT_FLOW.md  COMPREHENSIVE_RESEARCH.md  CONTENT_SERIES_PART_2.md  CROSS_AGENT_RECONCILIATION_RESEARCH.md  DEVELOPMENT_STORY.md  FIRST_RUN_OBSERVATIONS.md  GASTOWN_BUILD_PROCESS.md  IAB_DEPENDENCY_INTEGRATION.md  IAB_INTEGRATION.md  MULTI_AGENT_ARCHITECTURE_PLAN.md  MULTI_AGENT_ISOLATION_PLAN.md  RESEARCH_PLAN.md  SCENARIO_B_GAP_ANALYSIS.md  SCENARIO_COMPARISON.md  SUI_SEALS_INTEGRATION.md  V2_SIMULATION_SPEC.md
output/: 30day-results.json
results/: 3day_a2a_results.json  5DAY_SIMULATION_REPORT.md  5day_mock_results.json  5day_scenarios_results.json  live_metrics.json  multi_agent_isolated_20260130_185613.json  real_context_20260130_160407.json  real_context_20260130_175531.json  real_llm_20260130_154917.json
scripts/: gastown-start.sh  install_iab_repos.sh  live_metrics.py  monitor_context_rot.py  monitor_multi_agent.py  monitor_pressure.py  run_5day_comparison.py  run_iab_simulation.py  run_isolated_agents_sim.py  run_multi_agent_isolated.py  run_multi_agent_simulation.py  run_pressure_simulation.py  run_real_context_simulation.py  run_real_llm_comparison.py  run_real_llm_simulation.py
src/: __init__.py  cli.py
src/agents/: __init__.py
src/cli/: __init__.py  main.py  v2_commands.py
src/context/: __init__.py  flow.py  metrics.py  recovery.py  rot.py  window.py
src/data/: campaign_loader.py
src/ground_truth/: __init__.py  db.py
src/hallucination/: __init__.py  classifier.py  types.py
src/infrastructure/: __init__.py  ground_truth.py  ledger.py  message_schemas.py  redis_bus.py
src/llm/: __init__.py  pricing_agent.py
src/logging/: __init__.py  writer.py
src/metrics/: __init__.py  collector.py  kpis.py
src/models/: __init__.py  agent_state.py  campaign_execution.py
src/orchestration/: __init__.py  buyer_system.py  convoy_sync.py  event_injector.py  logger.py  run_simulation.py  seller_system.py  time_controller.py  v2_orchestrator.py
src/pressure/: __init__.py  token_tracker.py
src/protocols/: __init__.py  a2a.py  aa.py  inter_level.py  ucp.py
src/reports/: __init__.py  generator.py  v2_reports.py
src/resilience/: __init__.py  restart.py
src/scenarios/: __init__.py  a2a_http_mode.py  base.py  context_rot.py  multi_agent_scenario_a.py  multi_agent_scenario_b.py  multi_agent_scenario_c.py  reconciliation.py  scenario_a.py  scenario_b.py  scenario_c.py
src/sim_logging/: comparison.py  events.py  narratives.py
src/state/: __init__.py  campaign_portfolio.py  cross_campaign.py  ledger_backed.py  sync.py  volatile.py
src/tools/: __init__.py  base.py  mcp_client.py  registry.py
src/tracking/: __init__.py  decision_chain.py
src/volume/: __init__.py  generator.py
tests/: __init__.py  conftest.py  test_a2a_integration.py  test_buyer_l2_specialists.py  test_buyer_l3_functional.py  test_campaign_state.py  test_context_flow.py  test_decision_chain.py  test_ground_truth.py  test_hallucination.py  test_iab_integration.py  test_multi_agent_scenarios.py  test_orch_logging.py  test_protocols.py  test_reconciliation.py  test_restart.py  test_scaffold.py  test_seller_l2_inventory.py  test_token_pressure.py  test_tools.py  test_ucp.py  test_v2_orchestrator.py  test_v2_reports.py  test_volume.py
tests/agents/: __init__.py  test_base_classes.py  test_seller_adapter.py
tests/cli/: test_v2_cli.py
tests/infrastructure/: test_ledger.py  test_message_schemas.py  test_redis_bus.py
tests/integration/: conftest.py  (+2 more)
(+93 files in other folders)
