[project]
name = "iab-agentic-ecosystem-simulation"
version = "0.1.0"
description = "Simulation of IAB Agentic RTB Framework comparing exchange-based, pure A2A, and ledger-backed scenarios"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.0",

    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.28",
    "alembic>=1.12",

    # Redis
    "redis>=5.0",

    # Metrics
    "influxdb-client>=1.38",

    # IAB Agent Dependencies
    "crewai>=0.86.0",
    "anthropic>=0.18",
    "litellm>=1.0",
    "httpx>=0.25",

    # Utilities
    "python-dotenv>=1.0",
    "structlog>=23.0",
    "typer>=0.9",
    "rich>=13.0",

    # API (for health/metrics endpoints)
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "prometheus-client>=0.19",

    # Templating
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "aiosqlite>=0.19",
]

[project.scripts]
rtb-sim = "src.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
