[project]
name = "iab-agentic-ecosystem-simulation"
version = "0.1.0"
description = "Simulation of IAB Agentic RTB Framework"
requires-python = ">=3.11"

dependencies = [
    # Core
    "pydantic>=2.0",

    # Redis
    "redis>=5.0",

    # PostgreSQL (for Scenario C ledger)
    "asyncpg>=0.28",

    # Logging
    "structlog>=23.0",

    # CLI
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]

# Full dependencies for complete simulation
full = [
    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.28",
    "alembic>=1.12",

    # Metrics
    "influxdb-client>=1.38",

    # IAB Agent Dependencies
    "crewai>=0.86.0",
    "anthropic>=0.18",
    "litellm>=1.0",
    "httpx>=0.25",
    "pydantic-settings>=2.0",

    # CLI
    "typer>=0.9",
    "rich>=13.0",

    # Utilities
    "python-dotenv>=1.0",
]

[project.scripts]
rtb-sim = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: mark test as requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
